@@ -16,6 +16,7 @@ Repository head::
      Move to Go-style match references (${1}) from Python ones (\1).
      Simplifued syntax of solit command.
      repotool initialize becomes repotool makemake.
+     Added repotool init command to initialize a repository.
 
 4.38: 2023-06-14::
      Experimental Perforce (p4) mirroring support in repotool.
